2014-04-02  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc64/power7/memrchr.S: Correct stream hint.

2014-04-02  Alan Modra  <amodra@gmail.com>

	* sysdeps/powerpc/powerpc64/start.S: Add @toc to toc symbol reference.

2014-04-01  Alan Modra  <amodra@gmail.com>

	[BZ #16786]
	* sysdeps/powerpc/powerpc64/fpu/s_copysign.S: Don't trash stack.

2014-03-31  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power8/fpu/s_finite.S (MFVSRD_R3_V1):
	Encode instruction correctly in little endian.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isinf.S (MFVSRD_R3_V1):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_isnan.S (MFVSRD_R3_V1):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_llrint.S (MFVSRD_R3_V1):
	Likewise.
	* sysdeps/powerpc/powerpc64/power8/fpu/s_llround.S (MFVSRD_R3_V1):
	Likewise.

2014-03-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
	    Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* string/strpbrk.c (strpbrk): Using macro to redefine symbol name.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strpbrk-power7
	and strpbrk-ppc64 objects.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add new strpbrk optimized symbols.
	* sysdeps/powerpc/powerpc64/multiarch/strpbrk-power7.S: New file:
	multiarch strpbrk for POWER7.
	* sysdeps/powerpc/powerpc64/multiarch/strpbrk-ppc64.c: New file:
	multiarch strpbrk for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strpbrk.c: New file: strpbrk
	ifunc selector.
	* sysdeps/powerpc/powerpc64/power7/strpbrk.S: New file: optimited
	strpbrk for POWER7.

2014-03-20  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* string/strcspn.c (strcspn): Using macro to redefine symbol name.
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strcspn-power7
	and strcspn-ppc64 objects.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c
	(__libc_ifunc_impl_list): Add new strcspn optimized symbols.